--- a/package.json
+++ b/package.json
@@ -9,16 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/material": "^7.2.0",
+    "@mui/x-charts": "^8.9.0",
+    "@rainbow-me/rainbowkit": "^2.2.3",
+    "@reown/appkit": "^1.6.8",
+    "@reown/appkit-adapter-wagmi": "^1.6.8",
+    "@tanstack/react-query": "^5.66.9",
+    "axios": "^1.7.9",
+    "ethers": "^6.13.5",
+    "graphql-request": "^7.1.2",
+    "js-cookie": "^3.0.5",
+    "next": "15.0.2",
+    "nextjs-toploader": "^3.7.15",
     "react": "19.0.0-rc-02c0e824-20241028",
     "react-dom": "19.0.0-rc-02c0e824-20241028",
-    "next": "15.0.2"
+    "react-icons": "^5.5.0",
+    "react-toastify": "^11.0.3",
+    "tailwind-merge": "^3.3.1",
+    "wagmi": "^2.14.12"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@types/js-cookie": "^3.0.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "postcss": "^8",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
